--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    border: 4px solid rgb(167, 161, 153);
+    border-radius: 5px;
 }
 
 .screen{
