--- a/style.css
+++ b/style.css
@@ -1,40 +1,47 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    align-content: center;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+  width: 100vw;
 }
 
-.container{
-    max-width: 300px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border: 4px solid rgb(167, 161, 153);
-    border-radius: 5px;
+.container {
+  /* max-width: 300px; */
+  /* max-height: 270px; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border: 4px solid rgb(167, 161, 153);
+  border-radius: 5px;
 }
 
-.screen{
-    display: flex;
-    flex-direction: column;
+.screen {
+  display: flex;
+  flex-direction: column;
+
+  font-size: 1.5em;
+  border-bottom: 2px solid rgb(167, 161, 153);
 }
 
-.buttonsMap{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.buttonsMap {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
-.lastOperation{
-    height: 1em;
+.lastOperation {
+  height: 1em;
 }
 
-.currentOperation{
-    max-height: 1em;
+.currentOperation {
+  max-height: 1em;
 }
-button{
-    padding: 1em;
+button {
+  padding: 1em;
 }
